  07 Jan 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  hash-slinger-2.6.ebuild:
  net-dns/hash-slinger: fixed libreswan dependency

*hash-slinger-2.6 (07 Jan 2015)

  07 Jan 2015; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +hash-slinger-2.6.ebuild, -hash-slinger-2.5.ebuild, metadata.xml:
  net-dns/hash-slinger: version bump

  05 Jun 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  hash-slinger-2.5.ebuild, metadata.xml:
  net-dns/hash-slinger: make sshfp and gnupg conditional

  05 Jun 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  hash-slinger-2.5.ebuild:
  net-dns/hash-slinger added python usedep

*hash-slinger-2.5 (05 Jun 2014)

  05 Jun 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +hash-slinger-2.5.ebuild, +metadata.xml:
  net-dns/hash-slinger: new ebuild